--- a/style/style.production.css
+++ b/style/style.production.css
@@ -323,21 +323,32 @@ footer {
     background-color: rebeccapurple;
   }
 
-  .logos_wrapper img {
-    max-height: 1.5em;
-    width: 100%;
-  }
-
   .logos_wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
     gap: 1.5em;
     position: relative;
     left: calc(50% - 50px);
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+
+    img {
+      max-height: 1.5em;
+      width: 150%;
+    }
+
+    a {
+      /* This is necessary just for Safari! */
+      width: 30px;
+    }
   }
 }
 
